--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -49,38 +49,38 @@ jobs:
         run: |
           curl -X POST "http://localhost:8000/api/generate-ui" || echo "Backend API not reachable"
           curl -X GET "http://localhost:8001/home.html" || echo "Frontend not reachable"
+          
 
-
-  deploy-backend:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Deploy Backend via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /path/to/backend
-            git pull origin main
-            pip install -r requirements.txt
-            systemctl restart backend.service || nohup uvicorn app:app --host 0.0.0.0 --port 8000 &
-
-
-  deploy-frontend:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Deploy Frontend via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /path/to/frontend
-            git pull origin main
-            nohup python3 -m http.server 8001 &
+  #deploy-backend:
+  #  needs: build-and-test
+  #  runs-on: ubuntu-latest
+#
+  #  steps:
+  #    - name: Deploy Backend via SSH
+  #      uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.SERVER_HOST }}
+  #        username: ${{ secrets.SERVER_USER }}
+  #        key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #        script: |
+  #          cd /path/to/backend
+  #          git pull origin main
+  #          pip install -r requirements.txt
+  #          systemctl restart backend.service || nohup uvicorn app:app --host 0.0.0.0 --port 8000 &
+#
+#
+  #deploy-frontend:
+  #  needs: build-and-test
+  #  runs-on: ubuntu-latest
+#
+  #  steps:
+  #    - name: Deploy Frontend via SSH
+  #      uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.SERVER_HOST }}
+  #        username: ${{ secrets.SERVER_USER }}
+  #        key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #        script: |
+  #          cd /path/to/frontend
+  #          git pull origin main
+  #          nohup python3 -m http.server 8001 &
